--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 Flask==3.0.0
 flask-cors==4.0.0
 gunicorn==21.2.0
-numpy
-sentence-transformers
+numpy==1.26.4
+sentence-transformers==2.2.2
 gensim==4.3.3
 PyPDF2==3.0.1
 python-docx==1.1.0
 nltk==3.8.1
-torch
-transformers
+torch==2.1.0
+transformers==4.35.0
 Werkzeug==3.0.1
-scipy<1.14.0
+scipy==1.11.4
